force-app/main/default/objects/Usage_Product_Details__c/Usage_Product_Details__c.object-meta.xml
<CustomObject>
    <label>Usage Product Detail</label>
    <nameField>
        <label>Usage Product Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Usage Product Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>