force-app/main/default/objects/Usage_Product_Details__c/fields/Association_Fee__c.field-meta.xml
<CustomField>
    <fullName>Association_Fee__c</fullName>
    <label>Association Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>