force-app/main/default/objects/Usage_Product_Details__c/fields/Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Amount__c</fullName>
    <description>Usage Policy Deposit Amount</description>
    <inlineHelpText>Usage Policy Deposit Amount</inlineHelpText>
    <label>Deposit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>