force-app/main/default/objects/Usage_Product_Details__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <description>Usage Hours</description>
    <inlineHelpText>Usage Hours submitted by Memember</inlineHelpText>
    <label>Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>