force-app/main/default/objects/Usage_Product_Details__c/fields/Miles__c.field-meta.xml
<CustomField>
    <fullName>Miles__c</fullName>
    <description>Usage Miles</description>
    <inlineHelpText>Usage Miles submitted by Member</inlineHelpText>
    <label>Miles</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>