force-app/main/default/objects/Usage_Product_Details__c/fields/Minimum_Premium__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Premium__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Minimum Premium</description>
    <inlineHelpText>If there is a minimum due premium this box is checked, true.</inlineHelpText>
    <label>Minimum Premium</label>
    <type>Checkbox</type>
</CustomField>