force-app/main/default/objects/Usage_Product_Details__c/fields/Minimum_Premium_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Premium_Amount__c</fullName>
    <label>Minimum Premium Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>