force-app/main/default/objects/Usage_Product_Details__c/fields/Policy_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Policy_Deposit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Policy Deposit</description>
    <inlineHelpText>Policy Deposit, if checked equals Yes</inlineHelpText>
    <label>Policy Deposit</label>
    <type>Checkbox</type>
</CustomField>