force-app/main/default/objects/Usage_Product_Details__c/fields/Premium_Rate_Driver__c.field-meta.xml
<CustomField>
    <fullName>Premium_Rate_Driver__c</fullName>
    <label>Premium Rate Driver</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>Miles</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>