force-app/main/default/objects/Usage_Product_Details__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <description>Usage Revenue</description>
    <inlineHelpText>Usage Revenue submitted by Member</inlineHelpText>
    <label>Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>