force-app/main/default/objects/Usage_Product_Details__c/validationRules/Deposit_Amount_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Deposit_Amount_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Policy_Deposit__c, OR (ISBLANK(Deposit_Amount__c)))</errorConditionFormula>
    <errorDisplayField>Deposit_Amount__c</errorDisplayField>
    <errorMessage>If there is a policy deposit the policy deposit amount must be populated.</errorMessage>
</ValidationRule>