force-app/main/default/objects/Usage_Product_Details__c/validationRules/Minimum_Premium_Amount_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_Premium_Amount_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Minimum_Premium__c, OR (ISBLANK( Minimum_Premium_Amount__c )))</errorConditionFormula>
    <errorDisplayField>Deposit_Amount__c</errorDisplayField>
    <errorMessage>If there is a policy deposit the policy deposit amount must be populated.</errorMessage>
</ValidationRule>